# decentchat

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.claude/: CLAUDE.md
.github/workflows/: release.yml
crates/decentchat/: Cargo.toml
crates/decentchat-core/: Cargo.toml
crates/decentchat-core/src/: clock.rs  events.rs  group.rs  lib.rs  types.rs
crates/decentchat-core/src/crdt/: message_log.rs  mod.rs  user_registry.rs
crates/decentchat-guardian/: Cargo.toml
crates/decentchat-guardian/src/: error.rs  lib.rs  node.rs  session.rs  store.rs
crates/decentchat-guardian/tests/: guardian_two_node.rs
crates/decentchat-mcp/: Cargo.toml
crates/decentchat-mcp/src/: bridge.rs  error.rs  lib.rs  resources.rs  server.rs  tools.rs
crates/decentchat-protocol/: Cargo.toml
crates/decentchat-protocol/src/: error.rs  identity.rs  lib.rs  messages.rs  node.rs  session.rs  sync.rs  ticket.rs
crates/decentchat-protocol/src/transport/: mod.rs  quic.rs  traits.rs
crates/decentchat-protocol/tests/: sync_integration.rs  transport_integration.rs
crates/decentchat-tui/: Cargo.toml
crates/decentchat-tui/src/: app.rs  commands.rs  error.rs  input.rs  lib.rs  render.rs  run.rs  terminal.rs
crates/decentchat-tui/src/widgets/: input_box.rs  members_sidebar.rs  message_list.rs  mod.rs
crates/decentchat/src/: cli.rs  config.rs  main.rs  profile.rs
deploy/: README.md  decentchat-relay.service  relay.env  setup.sh
