[workspace]
resolver = "2"
members = [
    "crates/decentchat",
    "crates/decentchat-core",
    "crates/decentchat-guardian",
    "crates/decentchat-mcp",
    "crates/decentchat-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/youruser/decentchat"
rust-version = "1.97"
authors = ["Oleksandr Maslo"]
description = "Decentralized terminal chat using Guardian DB"
keywords = ["chat", "p2p", "decentralized", "tui", "guardian-db"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Internal crates
decentchat-core = { path = "crates/decentchat-core" }
decentchat-guardian = { path = "crates/decentchat-guardian" }
decentchat-mcp = { path = "crates/decentchat-mcp" }
decentchat-tui = { path = "crates/decentchat-tui" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Networking
guardian-db = "0.19"
iroh = "1.0.2"
iroh-docs = "0.101.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
hex = "0.4"
blake3 = "1"
uuid = { version = "1", features = ["v7", "serde"] }

# Testing
tempfile = "3"
