[package]
name = "decentchat-guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
decentchat-core.workspace = true
guardian-db.workspace = true
iroh.workspace = true
iroh-docs.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
blake3.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
