[package]
name = "decentchat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for AI agent integration with DecentChat"

[dependencies]
decentchat-core.workspace = true
decentchat-guardian.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

rmcp = { version = "0.14", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
