[package]
name = "decentchat-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
decentchat-core.workspace = true

tokio.workspace = true
async-trait.workspace = true
iroh.workspace = true
postcard.workspace = true
serde.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
tokio-test.workspace = true
