[package]
name = "decentchat-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
decentchat-core.workspace = true
decentchat-guardian.workspace = true

tokio = { workspace = true, features = ["sync", "macros"] }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
