[package]
name = "decentchat"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "decentchat"
path = "src/main.rs"

[dependencies]
decentchat-core.workspace = true
decentchat-protocol.workspace = true
decentchat-tui.workspace = true

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
