[package]
name = "decentchat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "decentchat"
path = "src/main.rs"

[dependencies]
decentchat-core.workspace = true
decentchat-mcp.workspace = true
decentchat-guardian.workspace = true
decentchat-tui.workspace = true

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
